--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -104,7 +104,7 @@ msgid ""
 "versions of supported operated systems, there will be no new full feature "
 "releases for the language or standard library."
 msgstr ""
-"Python 2.7 es el ultimo lanzamiento importante de la serie 2.x, ya que los "
+"Python 2.7 es el último lanzamiento importante de la serie 2.x, ya que los "
 "mantenedores de Python han cambiado el enfoque de sus esfuerzos en el "
 "desarrollo de nuevas características para la serie de Python 3.x. Esto "
 "significa que mientras Python 2 continué recibiendo corrección de errores, y "
