--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -107,7 +107,7 @@ msgstr ""
 "Python 2.7 es el último lanzamiento importante de la serie 2.x, ya que los "
 "mantenedores de Python han cambiado el enfoque de sus esfuerzos en el "
 "desarrollo de nuevas características para la serie de Python 3.x. Esto "
-"significa que mientras Python 2 continué recibiendo corrección de errores, y "
+"significa que mientras Python 2 continúe recibiendo corrección de errores, y "
 "sea actualizado para construir correctamente sobre nuevo hardware y "
 "versiones de sistemas operativos compatibles, no habrá nuevas versiones "
 "completas de funciones para el idioma o la biblioteca estándar."
