--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -439,7 +439,7 @@ msgstr ""
 "La API :class:`~collections.OrderedDict` proporciona la misma interfaz que "
 "los diccionarios normales, pero recorre en iteración las claves y los "
 "valores en un orden garantizado en función de cuándo se insertó una clave "
-"por primera vez:"
+"por primera vez::"
 
 #: ../Doc/whatsnew/2.7.rst:233
 msgid ""
