--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -447,7 +447,7 @@ msgid ""
 "is left unchanged::"
 msgstr ""
 "Si una nueva entrada sobrescribe una entrada existente, la posición de "
-"inserción original no se modifica:"
+"inserción original no se modifica::"
 
 #: ../Doc/whatsnew/2.7.rst:240
 msgid "Deleting an entry and reinserting it will move it to the end::"
