--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -451,7 +451,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.7.rst:240
 msgid "Deleting an entry and reinserting it will move it to the end::"
-msgstr "Borrando una entrada y luego reinsertándola, moverá la misma al final:"
+msgstr "Borrando una entrada y luego reinsertándola, moverá la misma al final::"
 
 #: ../Doc/whatsnew/2.7.rst:247
 msgid ""
