--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -463,7 +463,7 @@ msgstr ""
 "El método :meth:`~collections.OrderedDict.popitem` tiene un argumento *last* "
 "opcional que por defecto esta en ``True`` (verdadero). Si *last* es "
 "verdadero, la ultima llave ingresada es regresada y eliminada; si es falso, "
-"se selecciona la llave más antigua:"
+"se selecciona la llave más antigua::"
 
 #: ../Doc/whatsnew/2.7.rst:262
 msgid ""
