Nuevo avance y agregado de palabras faltantes a diccionarios

--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-12-03 15:08-0300\n"
+"PO-Revision-Date: 2020-12-16 16:38-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -54,10 +54,10 @@ msgid ""
 msgstr ""
 "El manejo numérico ha sido mejorado en muchas formas, tanto para los números "
 "de punto flotante como para la clase :class:`~decimal.Decimal`. Hay algunas "
-"adiciones útiles a la biblioteca estándar, como una gran mejora al modulo "
-"unittest, el modulo :mod:`argparse` para analizar las opciones de la línea "
-"de comandos, adecuando las clases :class:`~collections.OrderedDict` y :class:"
-"`~collections.Counter` en el modulo :mod:`collections`, y muchas otras "
+"adiciones útiles a la biblioteca estándar, como una gran mejora al modulo :"
+"mod:`unittest`, el modulo :mod:`argparse` para analizar las opciones de la "
+"línea de comandos, adecuando las clases :class:`~collections.OrderedDict` y :"
+"class:`~collections.Counter` en el modulo :mod:`collections`, y muchas otras "
 "mejoras."
 
 #: ../Doc/whatsnew/2.7.rst:63
@@ -451,7 +451,8 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.7.rst:240
 msgid "Deleting an entry and reinserting it will move it to the end::"
-msgstr "Borrando una entrada y luego reinsertándola, moverá la misma al final::"
+msgstr ""
+"Borrando una entrada y luego reinsertándola, moverá la misma al final::"
 
 #: ../Doc/whatsnew/2.7.rst:247
 msgid ""
