--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-12-16 16:38-0300\n"
+"PO-Revision-Date: 2020-12-16 17:49-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -729,7 +729,7 @@ msgstr "PEP escrito e implementado por Steven Bethard."
 
 #: ../Doc/whatsnew/2.7.rst:448
 msgid "PEP 391: Dictionary-Based Configuration For Logging"
-msgstr ""
+msgstr "PEP 391: Configuración basada en diccionarios para el registro"
 
 #: ../Doc/whatsnew/2.7.rst:450
 msgid ""
@@ -738,6 +738,10 @@ msgid ""
 "messages, format them differently, and direct messages to a varying number "
 "of handlers."
 msgstr ""
+"El módulo :mod:`logging` es muy flexible; las aplicaciones pueden definir un "
+"árbol de subsistemas de registro, y cada registrador de este árbol puede "
+"filtrar ciertos mensajes, formatearlos de forma diferente y dirigir mensajes "
+"a un número variable de controladores."
 
 #: ../Doc/whatsnew/2.7.rst:455
 msgid ""
@@ -748,6 +752,12 @@ msgid ""
 "doesn't support configuring filters, and it's messier to generate "
 "programmatically."
 msgstr ""
+"Toda esta flexibilidad puede requerir mucha configuración.  Puede escribir "
+"instrucciones Python para crear objetos y establecer sus propiedades, pero "
+"una configuración compleja requiere código detallado pero aburrido. :mod:"
+"`logging` también es compatible con una función :func:`~logging.fileConfig` "
+"que analiza un archivo, pero el formato de archivo no admite la "
+"configuración de filtros, y es más complicado generar mediante programación."
 
 #: ../Doc/whatsnew/2.7.rst:462
 msgid ""
@@ -757,6 +767,12 @@ msgid ""
 "containing JSON; or use a YAML parsing library if one is installed.  For "
 "more information see :ref:`logging-config-api`."
 msgstr ""
+"Python 2.7 agrega una función :func:`~logging.dictConfig` que utiliza un "
+"diccionario para configurar el registro.  Hay muchas maneras de producir un "
+"diccionario de diferentes fuentes: construir uno con código; analizar un "
+"archivo que contenga JSON; o utilice una biblioteca de análisis YAML si hay "
+"una instalada.  Para obtener más información, consulte :ref:`logging-config-"
+"api`."
 
 #: ../Doc/whatsnew/2.7.rst:468
 msgid ""
@@ -766,12 +782,20 @@ msgid ""
 "will be written to a :file:`network.log` file that will be rotated once the "
 "log reaches 1MB."
 msgstr ""
+"En el ejemplo siguiente se configuran dos registradores, el registrador raíz "
+"y un registrador denominado \"network\".  Los mensajes enviados al "
+"registrador raíz se enviarán al registro del sistema mediante el protocolo "
+"syslog, y los mensajes al registrador de la \"network\" se escribirán en un "
+"archivo :file:`network.log` que se rotará una vez que el registro alcance "
+"1MB."
 
 #: ../Doc/whatsnew/2.7.rst:518
 msgid ""
 "Three smaller enhancements to the :mod:`logging` module, all implemented by "
 "Vinay Sajip, are:"
 msgstr ""
+"Tres mejoras más pequeñas en el módulo :mod:`logging`, todas implementadas "
+"por Vinay Sajip, son:"
 
 #: ../Doc/whatsnew/2.7.rst:523
 msgid ""
@@ -780,6 +804,11 @@ msgid ""
 "socket to use, either :const:`socket.SOCK_DGRAM` for UDP or :const:`socket."
 "SOCK_STREAM` for TCP.  The default protocol remains UDP."
 msgstr ""
+"La clase :class:`~logging.handlers.SysLogHandler` ahora admite syslogging a "
+"través de TCP.  El constructor tiene un parámetro *socktype* que proporciona "
+"el tipo de socket que se va a usar, ya sea :const:`socket.SOCK_DGRAM` para "
+"UDP o :const:`socket.SOCK_STREAM` para TCP.  El protocolo predeterminado "
+"sigue siendo UDP."
 
 #: ../Doc/whatsnew/2.7.rst:529
 msgid ""
@@ -789,6 +818,11 @@ msgid ""
 "calling ``log.getChild('network.listen')`` is equivalent to ``getLogger('app."
 "network.listen')``."
 msgstr ""
+"Las instancias :class:`~logging.Logger` ganaron un método :meth:`~logging."
+"Logger.getChild` que recupera un registrador descendiente mediante una ruta "
+"de acceso relativa. Por ejemplo, una vez que se recupera un registrador "
+"haciendo ``log = getLogger('app')``, llamando ``log.getChild('network."
+"listen')`` es equivalente a ``getLogger('app.network.listen')``."
 
 #: ../Doc/whatsnew/2.7.rst:535
 msgid ""
@@ -796,18 +830,21 @@ msgid ""
 "LoggerAdapter.isEnabledFor` method that takes a *level* and returns whether "
 "the underlying logger would process a message of that level of importance."
 msgstr ""
+"La clase :class:`~logging.LoggerAdapter` gano un método :meth:`~logging."
+"LoggerAdapter.isEnabledFor` que toma un *nivel* y devuelve si el registrador "
+"subyacente procesará un mensaje de ese nivel de importancia."
 
 #: ../Doc/whatsnew/2.7.rst:544
 msgid ":pep:`391` - Dictionary-Based Configuration For Logging"
-msgstr ""
+msgstr ":pep:`391` - Configuración basada en diccionarios para el registro"
 
 #: ../Doc/whatsnew/2.7.rst:545
 msgid "PEP written and implemented by Vinay Sajip."
-msgstr ""
+msgstr "PEP escrito e implementado por Vinay Sajip."
 
 #: ../Doc/whatsnew/2.7.rst:548
 msgid "PEP 3106: Dictionary Views"
-msgstr ""
+msgstr "PEP 3106: Vistas de diccionario"
 
 #: ../Doc/whatsnew/2.7.rst:550
 msgid ""
@@ -815,6 +852,9 @@ msgid ""
 "`~dict.items` are different in Python 3.x.  They return an object called a :"
 "dfn:`view` instead of a fully materialized list."
 msgstr ""
+"Los métodos de diccionarios :meth:`~dict.keys`, :meth:`~dict.values` y :meth:"
+"`~dict.items` son diferentes en Python 3.x. Ellos regresan un objeto "
+"llamado :dfn:`view` en lugar de una lista completamente materializada."
 
 #: ../Doc/whatsnew/2.7.rst:554
 msgid ""
@@ -823,24 +863,36 @@ msgid ""
 "would break.  Instead the 3.x versions were added under the new names :meth:"
 "`~dict.viewkeys`, :meth:`~dict.viewvalues`, and :meth:`~dict.viewitems`."
 msgstr ""
+"No es posible cambiar el retorno de valores de los métodos :meth:`~dict."
+"keys`, :meth:`~dict.values` y :meth:`~dict.items` en Python 2.7 porque se "
+"rompería demasiado código. En su lugar en las versiones 3.x se fueron "
+"agregando bajo los nuevos nombres  :meth:`~dict.viewkeys`, :meth:`~dict."
+"viewvalues` y :meth:`~dict.viewitems`."
 
 #: ../Doc/whatsnew/2.7.rst:568
 msgid ""
 "Views can be iterated over, but the key and item views also behave like "
 "sets.  The ``&`` operator performs intersection, and ``|`` performs a union::"
 msgstr ""
+"Las vistas se pueden iterar, pero las vistas de elementos y claves también "
+"se comportan como conjuntos. El operador ``&`` realiza la intersección y ``|"
+"`` realiza una unión::"
 
 #: ../Doc/whatsnew/2.7.rst:579
 msgid ""
 "The view keeps track of the dictionary and its contents change as the "
 "dictionary is modified::"
 msgstr ""
+"La vista realiza un seguimiento del diccionario y su contenido cambia a "
+"medida que se modifica el diccionario::"
 
 #: ../Doc/whatsnew/2.7.rst:589
 msgid ""
 "However, note that you can't add or remove keys while you're iterating over "
 "the view::"
 msgstr ""
+"Sin embargo, tenga en cuenta que no puede agregar o eliminar claves mientras "
+"está iterando sobre la vista::"
 
 #: ../Doc/whatsnew/2.7.rst:599
 msgid ""
@@ -848,56 +900,71 @@ msgid ""
 "change them to the standard :meth:`~dict.keys`, :meth:`~dict.values`, and :"
 "meth:`~dict.items` methods."
 msgstr ""
+"Puede usar los métodos de vista en el código en Python 2.x, y el convertidor "
+"2to3 los cambiará a los métodos estándar :meth:`~dict.keys`, :meth:`~dict."
+"values` y :meth:`~dict.items`."
 
 #: ../Doc/whatsnew/2.7.rst:606
 msgid ":pep:`3106` - Revamping dict.keys(), .values() and .items()"
-msgstr ""
+msgstr ":pep:`3106` - Renovación dict.keys(), .values() y .items()"
 
 #: ../Doc/whatsnew/2.7.rst:606
 msgid ""
 "PEP written by Guido van Rossum. Backported to 2.7 by Alexandre Vassalotti; :"
 "issue:`1967`."
 msgstr ""
+"PEP escrito por Guido van Rossum. Portado a 2.7 por Alexandre Vassalotti; :"
+"issue:`1967`."
 
 #: ../Doc/whatsnew/2.7.rst:611
 msgid "PEP 3137: The memoryview Object"
-msgstr ""
+msgstr "PEP 3137: El objeto memoryview"
 
 #: ../Doc/whatsnew/2.7.rst:613
 msgid ""
 "The :class:`memoryview` object provides a view of another object's memory "
 "content that matches the :class:`bytes` type's interface."
 msgstr ""
+"El objeto :class:`memoryview` proporciona una vista del contenido de la "
+"memoria de otro objeto que coincide con la interfaz de tipo  :class:`bytes`."
 
 #: ../Doc/whatsnew/2.7.rst:631
 msgid ""
 "The content of the view can be converted to a string of bytes or a list of "
 "integers:"
 msgstr ""
+"El contenido de la vista se puede convertir en una cadena de bytes o una "
+"lista de números enteros:"
 
 #: ../Doc/whatsnew/2.7.rst:643
 msgid ""
 ":class:`memoryview` objects allow modifying the underlying object if it's a "
 "mutable object."
 msgstr ""
+"Los objetos :class:`memoryview` permiten modificar el objeto subyacente si "
+"es un objeto mutable."
 
 #: ../Doc/whatsnew/2.7.rst:666
 msgid ":pep:`3137` - Immutable Bytes and Mutable Buffer"
-msgstr ""
+msgstr ":pep:`3137` - Bytes inmutables y búfer mutable"
 
 #: ../Doc/whatsnew/2.7.rst:665
 msgid ""
 "PEP written by Guido van Rossum. Implemented by Travis Oliphant, Antoine "
 "Pitrou and others. Backported to 2.7 by Antoine Pitrou; :issue:`2396`."
 msgstr ""
+"PEP escrito por Guido van Rossum. Implementado por Travis Oliphant, Antoine "
+"Pitrou y otros. Portado a 2.7 por Antoine Pitrou; :issue:`2396`."
 
 #: ../Doc/whatsnew/2.7.rst:672
 msgid "Other Language Changes"
-msgstr ""
+msgstr "Otros cambios de lenguaje"
 
 #: ../Doc/whatsnew/2.7.rst:674
 msgid "Some smaller changes made to the core Python language are:"
 msgstr ""
+"Algunos de los cambios mas pequeños hechos al núcleo del lenguaje de Python "
+"son:"
 
 #: ../Doc/whatsnew/2.7.rst:676
 msgid ""
