--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-12-16 17:49-0300\n"
+"PO-Revision-Date: 2020-12-16 18:23-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -974,10 +974,15 @@ msgid ""
 "values. ``{}`` continues to represent an empty dictionary; use ``set()`` for "
 "an empty set."
 msgstr ""
+"La sintaxis para literales de conjuntos se ha actualizado desde Python 3.x. "
+"Los corchetes se utilizan para rodear el contenido del conjunto mutable "
+"resultante; los literales de conjunto se distinguen de los diccionarios por "
+"no contener dos puntos ni valores. ``{}`` sigue representando un diccionario "
+"vacío; use ``set()`` para un conjunto vacío."
 
 #: ../Doc/whatsnew/2.7.rst:693
 msgid "Backported by Alexandre Vassalotti; :issue:`2335`."
-msgstr ""
+msgstr "Portado por Alexandre Vassalotti; :issue:`2335`."
 
 #: ../Doc/whatsnew/2.7.rst:695
 msgid ""
@@ -985,10 +990,13 @@ msgid ""
 "generalizing list/generator comprehensions to use the literal syntax for "
 "sets and dictionaries."
 msgstr ""
+"El diccionario y las comprensiones de conjuntos son otra característica "
+"portada desde 3.x, que generaliza las comprensiones de listas / generadores "
+"para usar la sintaxis literal para conjuntos y diccionarios."
 
 #: ../Doc/whatsnew/2.7.rst:707
 msgid "Backported by Alexandre Vassalotti; :issue:`2333`."
-msgstr ""
+msgstr "Portado por Alexandre Vassalotti; :issue:`2333`."
 
 #: ../Doc/whatsnew/2.7.rst:709
 msgid ""
@@ -996,22 +1004,30 @@ msgid ""
 "statement.  Context managers are processed from left to right and each one "
 "is treated as beginning a new :keyword:`!with` statement. This means that::"
 msgstr ""
+"La declaración :keyword:`with` ahora puede usar múltiples administradores de "
+"contexto en una declaración. Los administradores de contexto se procesan de "
+"izquierda a derecha y cada uno se trata como si comenzara una nueva "
+"declaración :keyword:`!with`. Esto significa que::"
 
 #: ../Doc/whatsnew/2.7.rst:717
 msgid "is equivalent to::"
-msgstr ""
+msgstr "es equivalente a::"
 
 #: ../Doc/whatsnew/2.7.rst:723
 msgid ""
 "The :func:`contextlib.nested` function provides a very similar function, so "
 "it's no longer necessary and has been deprecated."
 msgstr ""
+"La función :func:`contextlib.nested` provee una función muy similar, por lo "
+"que ya no es necesario y ha quedado obsoleto."
 
 #: ../Doc/whatsnew/2.7.rst:726
 msgid ""
 "(Proposed in https://codereview.appspot.com/53094; implemented by Georg "
 "Brandl.)"
 msgstr ""
+"(Propuesta en https://codereview.appspot.com/53094; implementado por Georg "
+"Brandl.)"
 
 #: ../Doc/whatsnew/2.7.rst:729
 msgid ""
@@ -1023,6 +1039,14 @@ msgid ""
 "`pickle` and :mod:`json` modules; parsing of float and imaginary literals in "
 "Python code; and :class:`~decimal.Decimal`-to-float conversion."
 msgstr ""
+"Las conversiones entre números de punto flotante y cadenas ahora se "
+"redondean correctamente en la mayoría de las plataformas. Estas conversiones "
+"ocurren en muchos lugares diferentes: :func:`str` en flotantes y números "
+"complejos; los constructores :class:`float` y :class:`complex`; formato "
+"numérico; serializar y deserializar flotantes y números complejos usando los "
+"módulos :mod:`marshal`, :mod:`pickle` y :mod:`json`; análisis de literales "
+"flotantes e imaginarios en código Python; y conversión :class:`~decimal."
+"Decimal` a flotante."
 
 #: ../Doc/whatsnew/2.7.rst:741
 msgid ""
@@ -1031,6 +1055,11 @@ msgid ""
 "back to *x* under correct rounding (with round-half-to-even rounding mode).  "
 "Previously it gave a string based on rounding x to 17 decimal digits."
 msgstr ""
+"Relacionado con esto, el :func:`repr` de un número de punto flotante *x* "
+"ahora devuelve un resultado basado en la cadena decimal más corta que se "
+"garantiza que se redondeará a *x* con el redondeo correcto (con el modo de "
+"redondeo *round-half-to-even*). Anteriormente, daba una cadena basada en "
+"redondear x a 17 dígitos decimales."
 
 #: ../Doc/whatsnew/2.7.rst:749
 msgid ""
