--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -472,7 +472,7 @@ msgid ""
 "requires that the insertion order was the same::"
 msgstr ""
 "La comparación de dos diccionarios ordenados comprueba tanto las claves como "
-"los valores, y requiere que el orden de inserción sea el mismo:"
+"los valores, y requiere que el orden de inserción sea el mismo::"
 
 #: ../Doc/whatsnew/2.7.rst:278
 msgid ""
