Reemplazar Genera por Lanza

--- a/distutils/apiref.po
+++ b/distutils/apiref.po
@@ -1292,7 +1292,7 @@ msgstr ""
 
 #: ../Doc/distutils/apiref.rst:624
 msgid "Raises :exc:`CompileError` on failure."
-msgstr "Genera :exc:`CompileError` en caso de falla."
+msgstr "Lanza :exc:`CompileError` en caso de falla."
 
 #: ../Doc/distutils/apiref.rst:629
 msgid ""
@@ -1341,7 +1341,7 @@ msgstr ""
 
 #: ../Doc/distutils/apiref.rst:648
 msgid "Raises :exc:`LibError` on failure."
-msgstr "Genera :exc:`LibError` en caso de falla."
+msgstr "Lanza :exc:`LibError` en caso de falla."
 
 #: ../Doc/distutils/apiref.rst:653
 msgid ""
@@ -1432,7 +1432,7 @@ msgstr ""
 
 #: ../Doc/distutils/apiref.rst:690
 msgid "Raises :exc:`LinkError` on failure."
-msgstr "Genera :exc:`LinkError` en caso de falla."
+msgstr "Lanza :exc:`LinkError` en caso de falla."
 
 #: ../Doc/distutils/apiref.rst:695
 msgid ""
@@ -1485,7 +1485,7 @@ msgstr ""
 
 #: ../Doc/distutils/apiref.rst:723
 msgid "Raises :exc:`PreprocessError` on failure."
-msgstr "Genera :exc:`PreprocessError` en caso de falla."
+msgstr "Lanza :exc:`PreprocessError` en caso de falla."
 
 #: ../Doc/distutils/apiref.rst:725
 msgid ""
@@ -1780,7 +1780,7 @@ msgstr ""
 "zip`. Utiliza el módulo Python :mod:`zipfile` (si está disponible) o la "
 "utilidad InfoZIP :file:`zip` (si está instalada y se encuentra en la ruta de "
 "búsqueda predeterminada). Si ninguna de las herramientas está disponible, "
-"genera :exc:`DistutilsExecError`. Retorna el nombre del archivo *zip* de "
+"lanza :exc:`DistutilsExecError`. Retorna el nombre del archivo *zip* de "
 "salida."
 
 #: ../Doc/distutils/apiref.rst:928
@@ -1808,7 +1808,7 @@ msgstr ""
 "Retorna verdadero si *source* existe y se ha modificado más recientemente "
 "que *target*, o si *source* existe y *target* no. Retorna falso si ambos "
 "existen y si *target* tiene el mismo tiempo o es más reciente que *source*. "
-"Genera :exc:`DistutilsFileError` si *source* no existe."
+"Lanza :exc:`DistutilsFileError` si *source* no existe."
 
 #: ../Doc/distutils/apiref.rst:949
 msgid ""
@@ -1872,7 +1872,7 @@ msgid ""
 msgstr ""
 "Crea un directorio y cualquier directorio ancestro que falte. Si el "
 "directorio ya existe (o si *name* es el string vacío, significa que el "
-"directorio actual, por supuesto existe), no hace nada. Genera :exc:"
+"directorio actual, por supuesto existe), no hace nada. Lanza :exc:"
 "`DistutilsFileError` si no puede crear algún directorio en el camino (por "
 "ejemplo, existe alguna subruta, pero es un archivo en lugar de un "
 "directorio). Si *verbose* es verdadero, imprime un resumen de una línea de "
@@ -1909,7 +1909,7 @@ msgid ""
 msgstr ""
 "Copia un árbol de directorio completo *src* en una nueva ubicación *dst*. "
 "Tanto *src* como *dst* deben ser nombres de directorio. Si *src* no es un "
-"directorio, genere :exc:`DistutilsFileError`. Si *dst* no existe, se crea "
+"directorio, lanza :exc:`DistutilsFileError`. Si *dst* no existe, se crea "
 "con :func:`mkpath`. El resultado final de la copia es que todos los archivos "
 "de *src* se copian en *dst*, y los directorios de *src* se copian de forma "
 "recursiva en *dst*. Retorna la lista de archivos que se copiaron o que "
@@ -2160,8 +2160,8 @@ msgstr ""
 "usando el separador de directorio actual. Necesario porque los nombres de "
 "archivo en el script de configuración siempre se proporcionan en estilo Unix "
 "y deben convertirse a la convención local antes de que podamos usarlos en el "
-"sistema de archivos. Genera :exc:`ValueError` en sistemas que no son Unix-"
-"ish si *pathname* comienza o termina con una barra."
+"sistema de archivos. Lanza :exc:`ValueError` en sistemas que no son Unix-ish "
+"si *pathname* comienza o termina con una barra."
 
 #: ../Doc/distutils/apiref.rst:1158
 msgid ""
@@ -2212,7 +2212,7 @@ msgstr ""
 "variable se sustituye por el valor que se encuentra en el diccionario "
 "*local_vars*, o en ``os.environ`` si no está en *local_vars*. *os.environ* "
 "primero se comprueba/aumenta para garantizar que contiene ciertos valores: "
-"ver :func:`check_environ`. Genera :exc:`ValueError` para cualquier variable "
+"ver :func:`check_environ`. Lanza :exc:`ValueError` para cualquier variable "
 "que no se encuentre en *local_vars* u ``os.environ``."
 
 #: ../Doc/distutils/apiref.rst:1183
@@ -2276,7 +2276,7 @@ msgid ""
 msgstr ""
 "Los valores verdaderos son ``y``, ``yes``, ``t``, ``true``, ``on`` y ``1``; "
 "los valores falsos son ``n``, ``no``, ``f``, ``false``, ``off`` and ``0``. "
-"Genera :exc:`ValueError` si *val* es cualquier otra cosa."
+"Lanza :exc:`ValueError` si *val* es cualquier otra cosa."
 
 #: ../Doc/distutils/apiref.rst:1221
 msgid ""
@@ -2419,8 +2419,8 @@ msgid ""
 "line arguments)."
 msgstr ""
 "Proporciona excepciones utilizadas por los módulos *Distutils*. Ten en "
-"cuenta que los módulos de Distutils pueden generar excepciones estándar; en "
-"particular, *SystemExit* generalmente se genera por errores que obviamente "
+"cuenta que los módulos de Distutils pueden lanzar excepciones estándar; en "
+"particular, *SystemExit* generalmente se lanza por errores que obviamente "
 "son culpa del usuario final (por ejemplo, argumentos incorrectos en la línea "
 "de comandos)."
 
@@ -2551,7 +2551,7 @@ msgid ""
 "called yet."
 msgstr ""
 "Retorna la lista de tuplas ``(*option*, *value*)`` procesadas por la "
-"ejecución anterior de :meth:`getopt` Genera :exc:`RuntimeError` si :meth:"
+"ejecución anterior de :meth:`getopt` Lanza :exc:`RuntimeError` si :meth:"
 "`getopt` aún no se ha llamado."
 
 #: ../Doc/distutils/apiref.rst:1394
@@ -2725,7 +2725,7 @@ msgstr ""
 "omite, se retorna el directorio independiente de la plataforma. Si se "
 "proporciona *prefix*, se usa como prefijo en lugar de :const:`PREFIX`, o "
 "como *exec-prefix* en lugar de :const:`EXEC_PREFIX` si *plat_specific* es "
-"verdadero. Si *standard_lib* es verdadero, se devuelve el directorio de la "
+"verdadero. Si *standard_lib* es verdadero, se retorna el directorio de la "
 "biblioteca estándar en lugar del directorio para la instalación de "
 "extensiones de terceros."
 
@@ -2835,7 +2835,7 @@ msgid ""
 "using the :func:`open` built-in function."
 msgstr ""
 "Las instancias de :class:`TextFile` se crean con *filename*, *file* o "
-"ambos. :exc:`RuntimeError` se genera si ambos son ``None``. *filename* debe "
+"ambos. :exc:`RuntimeError` se lanza si ambos son ``None``. *filename* debe "
 "ser un string, y *file* un archive de objeto (o algo que proporcione los "
 "métodos :meth:`readline` y :meth:`close`). Se recomienda que proporcione al "
 "menos *filename*, para que :class:`TextFile` pueda incluirlo en mensajes de "
