use RedHat instead of Redhat

--- a/distutils/apiref.po
+++ b/distutils/apiref.po
@@ -3261,7 +3261,7 @@ msgid ""
 "Redhat RPM and SRPM"
 msgstr ""
 ":mod:`distutils.command.bdist_rpm` --- Construye una distribución binaria "
-"como Redhat RPM y SRPM"
+"como RedHat RPM y SRPM"
 
 #: ../Doc/distutils/apiref.rst:1861
 msgid ":mod:`distutils.command.bdist_wininst` --- Build a Windows installer"
