agregar palabras pospell y powrap

--- a/reference/simple_stmts.po
+++ b/reference/simple_stmts.po
@@ -118,7 +118,7 @@ msgid ""
 "exceptions raised are given with the definition of the object types (see "
 "section :ref:`types`)."
 msgstr ""
-"Las asignaciones son definidas repulsivamente dependiendo de la forma del "
+"Las asignaciones son definidas recursivamente dependiendo de la forma del "
 "objetivo (lista). Cuando el objetivo es parte de un objeto mutable (una "
 "referencia a un atributo, una subscripción o un segmento), el objeto mutable "
 "finalmente debe realizar la asignación y decidir sobre su validez, y puede "
@@ -270,7 +270,6 @@ msgstr ""
 "expresión del subíndice."
 
 #: ../Doc/reference/simple_stmts.rst:201
-#, fuzzy
 msgid ""
 "If the primary is a mutable sequence object (such as a list), the subscript "
 "must yield an integer.  If it is negative, the sequence's length is added to "
@@ -286,7 +285,7 @@ msgstr ""
 "negativo menor que la longitud de la secuencia, y se le pide a la secuencia "
 "que asigne el objeto asignado a su elemento con ese índice. Si el índice "
 "está fuera de rango, :exc:`IndexError` se genera (la asignación a una "
-"secuencia subindicada no puede agregar nuevos elementos a una lista)."
+"secuencia suscrita no puede agregar nuevos elementos a una lista)."
 
 #: ../Doc/reference/simple_stmts.rst:212
 msgid ""
@@ -504,7 +503,7 @@ msgid ""
 "class or module scope, but not stored."
 msgstr ""
 "Para expresiones como destinos de asignaciones, las anotaciones se evalúan "
-"si estan en ámbitos de clase o módulo pero no se almacenan."
+"si están en ámbitos de clase o módulo pero no se almacenan."
 
 #: ../Doc/reference/simple_stmts.rst:348
 msgid ""
@@ -893,7 +892,7 @@ msgid ""
 "The ``__suppress_context__`` attribute to suppress automatic display of the "
 "exception context."
 msgstr ""
-"El atributo``__suppress_context__`` para suprimir la visualización "
+"El atributo ``__suppress_context__`` para suprimir la visualización "
 "automática del contexto de excepción."
 
 #: ../Doc/reference/simple_stmts.rst:658
@@ -1062,13 +1061,13 @@ msgid ""
 "find the module specified in the :keyword:`from` clause, loading and "
 "initializing it if necessary;"
 msgstr ""
-"encuentra el módulo especificado en la cláusua :keyword:`from`, cargando e "
+"encuentra el módulo especificado en la cláusula :keyword:`from`, cargando e "
 "inicializándolo si es necesario;"
 
 #: ../Doc/reference/simple_stmts.rst:782
 msgid "for each of the identifiers specified in the :keyword:`import` clauses:"
 msgstr ""
-"para cada uno de los identificadores especificadlos en la cláusula :keyword:"
+"para cada uno de los identificadores especificados en la cláusula :keyword:"
 "`import`:"
 
 #: ../Doc/reference/simple_stmts.rst:784
@@ -1252,7 +1251,7 @@ msgid ""
 "``annotations``."
 msgstr ""
 "La única característica en Python 3.7 que requiere el uso la declaración "
-"futuro es``annotations``."
+"futuro es ``annotations``."
 
 #: ../Doc/reference/simple_stmts.rst:880
 msgid ""
@@ -1352,7 +1351,7 @@ msgid ""
 "and the script includes a future statement, it will be in effect in the "
 "interactive session started after the script is executed."
 msgstr ""
-"Una declaración futura escrita en una promt interactiva del intérprete "
+"Una declaración futura escrita en una prompt interactiva del intérprete "
 "entrará en vigencia durante el resto de la sesión de dicho intérprete.  Si "
 "un intérprete se inicia con la opción :option:`-i`, se le pasa un nombre de "
 "script para ejecutar, y el script incluye una declaración futura, ésta "
