usar lanzar para raise

--- a/reference/simple_stmts.po
+++ b/reference/simple_stmts.po
@@ -50,8 +50,8 @@ msgid ""
 msgstr ""
 "Las declaraciones de tipo expresión son usadas (en su mayoría "
 "interactivamente) para computar y escribir un valor, o (usualmente) para "
-"llamar a un método (una función que no devuelve un resultado significativo;  "
-"en Python, los métodos devuelven el valor ``None``). Otros usos de las "
+"llamar a un método (una función que no retorna un resultado significativo;  "
+"en Python, los métodos retornan el valor ``None``). Otros usos de las "
 "declaraciones de tipo expresión son permitidas y ocasionalmente útiles. La "
 "sintaxis para una declaración de tipo expresión es:"
 
@@ -122,9 +122,9 @@ msgstr ""
 "objetivo (lista). Cuando el objetivo es parte de un objeto mutable (una "
 "referencia a un atributo, una subscripción o un segmento), el objeto mutable "
 "finalmente debe realizar la asignación y decidir sobre su validez, y puede "
-"generar una excepción si la asignación no es aceptable. Las reglas "
-"observadas por varios tipos y las excepciones planteadas se dan con la "
-"definición de los tipos de objeto (ver sección :ref:`types`)."
+"lanzar una excepción si la asignación no es aceptable. Las reglas observadas "
+"por varios tipos y las excepciones lanzadas se dan con la definición de los "
+"tipos de objeto (ver sección :ref:`types`)."
 
 #: ../Doc/reference/simple_stmts.rst:121
 msgid ""
@@ -223,10 +223,10 @@ msgid ""
 msgstr ""
 "Si el destino es una referencia de atributo: se evalúa la expresión primaria "
 "en la referencia. Debe producir un objeto con atributos asignables; si este "
-"no es el caso, una excepción :exc:`TypeError` es disparada.  Luego se le "
-"pide a ese objeto que asigne el objeto asignado al atributo dado; si no "
-"puede realizar la tarea, genera una excepción (generalmente pero no "
-"necesariamente :exc:`AttributeError`)."
+"no es el caso, una excepción :exc:`TypeError` es lanzada.  Luego se le pide "
+"a ese objeto que asigne el objeto asignado al atributo dado; si no puede "
+"realizar la tarea, lanza una excepción (generalmente pero no necesariamente :"
+"exc:`AttributeError`)."
 
 #: ../Doc/reference/simple_stmts.rst:171
 msgid ""
@@ -284,7 +284,7 @@ msgstr ""
 "longitud de la secuencia. El valor resultante debe ser un número entero no "
 "negativo menor que la longitud de la secuencia, y se le pide a la secuencia "
 "que asigne el objeto asignado a su elemento con ese índice. Si el índice "
-"está fuera de rango, :exc:`IndexError` se genera (la asignación a una "
+"está fuera de rango, :exc:`IndexError` se lanza (la asignación a una "
 "secuencia suscrita no puede agregar nuevos elementos a una lista)."
 
 #: ../Doc/reference/simple_stmts.rst:212
@@ -663,7 +663,7 @@ msgstr ""
 "La eliminación de un nombre elimina la vinculación de ese nombre del espacio "
 "de nombres local o global, dependiendo de si el nombre aparece en una "
 "declaración :keyword:`global` en el mismo bloque de código.  Si el nombre no "
-"está vinculado, se generará una excepción :exc:`NameError`."
+"está vinculado, se lanzará una excepción :exc:`NameError`."
 
 #: ../Doc/reference/simple_stmts.rst:469
 msgid ""
@@ -731,8 +731,8 @@ msgid ""
 "`StopIteration` and becomes the :attr:`StopIteration.value` attribute."
 msgstr ""
 "En una función generadora, la declaración :keyword:`return` indica que el "
-"generador ha acabado y hará que :exc:`StopIteration` se genere. El valor "
-"devuelto (si lo hay) se utiliza como argumento para construir :exc:"
+"generador ha acabado y hará que :exc:`StopIteration` se lance. El valor "
+"retornado (si lo hay) se utiliza como argumento para construir :exc:"
 "`StopIteration` y se convierte en el atributo :attr:`StopIteration.value`."
 
 #: ../Doc/reference/simple_stmts.rst:511
@@ -743,7 +743,7 @@ msgid ""
 "is a syntax error in an asynchronous generator function."
 msgstr ""
 "En una función de generador asíncrono, una declaración :keyword:`return` "
-"vacía indica que el generador asíncrono ha acabado y va a generar un :exc:"
+"vacía indica que el generador asíncrono ha acabado y va a lanzar un :exc:"
 "`StopAsyncIteration`.  Una declaración :keyword:`!return` no vacía es un "
 "error de sintaxis en una función generadora asíncrona."
 
@@ -800,9 +800,9 @@ msgid ""
 "current scope, a :exc:`RuntimeError` exception is raised indicating that "
 "this is an error."
 msgstr ""
-"Si no hay expresiones presentes, :keyword:`raise` vuelve a generar la última "
+"Si no hay expresiones presentes, :keyword:`raise` vuelve a lanzar la última "
 "excepción que estaba activa en el ámbito actual.  Si no hay ninguna "
-"excepción activa en el alcance actual, se genera una :exc:`RuntimeError` que "
+"excepción activa en el alcance actual, se lanza una :exc:`RuntimeError` que "
 "indica que se trata de un error."
 
 #: ../Doc/reference/simple_stmts.rst:571
@@ -833,11 +833,11 @@ msgid ""
 "using the :meth:`with_traceback` exception method (which returns the same "
 "exception instance, with its traceback set to its argument), like so::"
 msgstr ""
-"Normalmente, un objeto de rastreo se crea automáticamente cuando se genera "
+"Normalmente, un objeto de rastreo se crea automáticamente cuando se lanza "
 "una excepción y se le adjunta como atributo :attr:`__traceback__`, que se "
 "puede escribir. Puede crear una excepción y establecer su propio rastreo en "
 "un solo paso utilizando el método de excepción :meth:`with_traceback` (que "
-"devuelve la misma instancia de excepción, con su rastreo establecido en su "
+"retorna la misma instancia de excepción, con su rastreo establecido en su "
 "argumento), así::"
 
 #: ../Doc/reference/simple_stmts.rst:593
@@ -850,9 +850,9 @@ msgid ""
 msgstr ""
 "La clausura ``from`` se usa para el encadenamiento de excepciones: si se "
 "proporciona, la segunda *expresión* debe ser otra clase o instancia de "
-"excepción, que luego se adjuntará a la excepción generada como el atributo "
+"excepción, que luego se adjuntará a la excepción lanzada como el atributo "
 "de :attr:`__cause__` (que se puede escribir).  Si no se maneja la excepción "
-"generada, se imprimirán ambas excepciones::"
+"lanzada, se imprimirán ambas excepciones::"
 
 #: ../Doc/reference/simple_stmts.rst:614
 msgid ""
@@ -860,7 +860,7 @@ msgid ""
 "exception handler or a :keyword:`finally` clause: the previous exception is "
 "then attached as the new exception's :attr:`__context__` attribute::"
 msgstr ""
-"Un mecanismo similar funciona implícitamente si se genera una excepción "
+"Un mecanismo similar funciona implícitamente si se lanza una excepción "
 "dentro de un controlador de excepciones o una cláusula :keyword:`finally`: "
 "la excepción anterior se adjunta como el atributo :attr:`__context__` de la "
 "nueva excepción::"
@@ -1084,7 +1084,7 @@ msgstr ""
 
 #: ../Doc/reference/simple_stmts.rst:787
 msgid "if the attribute is not found, :exc:`ImportError` is raised."
-msgstr "si el atributo no se encuentra, :exc:`ImportError` es disparada."
+msgstr "si el atributo no se encuentra, :exc:`ImportError` es lanzada."
 
 #: ../Doc/reference/simple_stmts.rst:788
 msgid ""
@@ -1143,7 +1143,7 @@ msgid ""
 msgstr ""
 "La forma de importación comodín --- ``from module import *`` --- sólo se "
 "permite a nivel módulo.  Intentar usarlo en una definición de clase o "
-"función genera una :exc:`SyntaxError`."
+"función lanza una :exc:`SyntaxError`."
 
 #: ../Doc/reference/simple_stmts.rst:825
 msgid ""
@@ -1190,7 +1190,7 @@ msgid ""
 "``module``, ``filename``, ``sys.path``, ``sys.meta_path``, ``sys."
 "path_hooks``."
 msgstr ""
-"Dispara un :ref:`auditing event <auditing>` ``import`` con argumentos "
+"Lanza un :ref:`auditing event <auditing>` ``import`` con argumentos "
 "``module``, ``filename``, ``sys.path``, ``sys.meta_path``, ``sys."
 "path_hooks``."
 
@@ -1294,8 +1294,8 @@ msgid ""
 "feature not known to it."
 msgstr ""
 "Para cualquier versión dada, el compilador sabe qué nombres de "
-"características se han definido y genera un error en tiempo de compilación "
-"si una declaración futura contiene una característica que no conoce."
+"características se han definido y lanza un error en tiempo de compilación si "
+"una declaración futura contiene una característica que no conoce."
 
 #: ../Doc/reference/simple_stmts.rst:898
 msgid ""
